--- a/jsp-workspace/BookMarket/src/main/webapp/WEB-INF/web.xml
+++ b/jsp-workspace/BookMarket/src/main/webapp/WEB-INF/web.xml
@@ -1,5 +1,56 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="https://jakarta.ee/xml/ns/jakartaee" xsi:schemaLocation="https://jakarta.ee/xml/ns/jakartaee https://jakarta.ee/xml/ns/jakartaee/web-app_6_0.xsd" id="WebApp_ID" version="6.0">
+
+<security-role>
+	<description></description>
+	<role-name>admin</role-name>
+</security-role>
+<security-constraint>
+	<display-name>BookMarket Security</display-name>
+	<web-resource-collection>
+		<web-resource-name>BookMarket</web-resource-name>
+		<description></description>
+		<url-pattern>/addBook.jsp</url-pattern>
+	</web-resource-collection>
+	<auth-constraint>
+		<description>권한관리자명</description>
+		<role-name>admin</role-name>
+	</auth-constraint>
+</security-constraint>
+<login-config>
+	<auth-method>FORM</auth-method>
+	<form-login-config>
+		<form-login-page>/login.jsp</form-login-page>	
+		<form-error-page>/login_failed.jsp</form-error-page>
+	</form-login-config>
+</login-config>
+  
+<error-page>
+	<error-code>404</error-code>
+	<location>/exceptionNoPage.jsp</location>
+</error-page>
+<error-page>
+	<error-code>405</error-code>
+	<location>/exceptionNoPage.jsp</location>
+</error-page>
+<error-page>
+	<error-code>500</error-code>
+	<location>/exceptionNoPage.jsp</location>
+</error-page>
+
+<filter>
+	<filter-name>LogFilter</filter-name>
+	<filter-class>filter.LogFilter</filter-class>
+</filter>
+<filter-mapping>
+	<filter-name>LogFilter</filter-name>
+	<url-pattern>/*</url-pattern>
+</filter-mapping>
+
+
+
+
+  
   <display-name>BookMarket</display-name>
   <welcome-file-list>
     <welcome-file>index.html</welcome-file>
