--- a/jsp-workspace/JSPBook/src/main/webapp/WEB-INF/web.xml
+++ b/jsp-workspace/JSPBook/src/main/webapp/WEB-INF/web.xml
@@ -1,5 +1,33 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="https://jakarta.ee/xml/ns/jakartaee" xsi:schemaLocation="https://jakarta.ee/xml/ns/jakartaee https://jakarta.ee/xml/ns/jakartaee/web-app_6_0.xsd" id="WebApp_ID" version="6.0">
+<security-role>
+	<role-name>role1</role-name>
+</security-role>
+<security-constraint>
+	<web-resource-collection>
+		<web-resource-name>JSPBook</web-resource-name>
+		<url-pattern>/ch10/security01.jsp</url-pattern>
+		<http-method>GET</http-method>
+	</web-resource-collection>
+	<auth-constraint>
+		<description></description>
+		<role-name>role1</role-name>
+	</auth-constraint>
+</security-constraint>
+<login-config>
+	<auth-method>FORM</auth-method>
+		<form-login-config>
+			<form-login-page>/ch10/login.jsp</form-login-page>
+			<form-error-page>/ch10/login_failde.jsp</form-error-page>
+		</form-login-config>  
+</login-config>
+  
+  
+  
+  
+  
+  
+  
   <display-name>JSPBook</display-name>
   <welcome-file-list>
     <welcome-file>index.html</welcome-file>
